# Portakal-Transform

./: .gitignore  README.md  UI_HANDOFF.md  pr_body.txt  pyproject.toml  pytest_output.txt  requirements.txt
src/portakal_app/: __init__.py  __main__.py  app.py  models.py
src/portakal_app/data/: __init__.py  errors.py  models.py
src/portakal_app/data/services/: __init__.py  aggregate_columns_service.py  apply_domain_service.py  color_settings_service.py  column_statistics_service.py  concatenate_service.py  continuize_service.py  create_class_service.py  create_instance_service.py  data_info_service.py  data_sampler_service.py  dataset_catalog_service.py  discretize_service.py  domain_transform_service.py  feature_ranking_service.py  file_import_service.py  formula_service.py  generated_dataset_service.py  group_by_service.py  impute_service.py  llm_analyzer.py  llm_context_builder.py  melt_service.py  merge_data_service.py  paint_data_service.py  pivot_table_service.py  preprocess_service.py  preview_service.py  profiling_service.py  purge_domain_service.py  python_script_service.py  randomize_service.py  save_data_service.py  select_by_index_service.py  select_columns_service.py  select_rows_service.py  split_service.py  transpose_service.py  unique_service.py
src/portakal_app/ui/: __init__.py  catalog.py  i18n.py  icons.py  main_window.py  theme.py
tests/: test_data_services.py  test_data_table_screen.py  test_i18n_quality.py  test_main_window.py  test_my_continuize.py  test_new_widgets.py  test_preview_service.py  test_transform_services.py
(+49 files in other folders)
