[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portakal-app"
version = "0.1.0"
description = "Orange-inspired desktop shell for Portakal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
