[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portakal-app"
version = "0.1.0"
description = "Orange-inspired desktop shell for Portakal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8",
    "polars>=1.20",
    "fastexcel>=0.12.1",
    "httpx>=0.27",
    "kaggle>=1.7",
    "xlsxwriter>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
